test/corpus/structs.txt
================================================================================
Simple struct definition
================================================================================

struct Point {
    i64 x
    i64 y
}

--------------------------------------------------------------------------------

(source_file
  (struct_definition
    name: (identifier)
    (field_definition
      type: (primitive_type)
      name: (identifier))
    (field_definition
      type: (primitive_type)
      name: (identifier))))

================================================================================
Struct with default values
================================================================================

struct Counter {
    i64 count = 0
    bool enabled = true
}

--------------------------------------------------------------------------------

(source_file
  (struct_definition
    name: (identifier)
    (field_definition
      type: (primitive_type)
      name: (identifier)
      (integer_literal))
    (field_definition
      type: (primitive_type)
      name: (identifier)
      (boolean_literal))))

================================================================================
Struct with array field
================================================================================

struct Data {
    [8]i64 values
    [dyn]rune name
}

--------------------------------------------------------------------------------

(source_file
  (struct_definition
    name: (identifier)
    (field_definition
      type: (array_type
        size: (array_size)
        (primitive_type))
      name: (identifier))
    (field_definition
      type: (array_type
        size: (dyn_marker)
        (primitive_type))
      name: (identifier))))

================================================================================
Struct with annotations
================================================================================

struct Buffer {
    [dyn]u8 data @prealloc(8)
}

--------------------------------------------------------------------------------

(source_file
  (struct_definition
    name: (identifier)
    (field_definition
      type: (array_type
        size: (dyn_marker)
        (primitive_type))
      name: (identifier)
      (annotation
        (identifier)
        (integer_literal)))))

================================================================================
Struct with dynamic array fields and default values
================================================================================

struct Intersection {
    i64 start = 0
    i64 end = 0
    [dyn]rune day = ""
    [dyn]Class classes = []
}

--------------------------------------------------------------------------------

(source_file
  (struct_definition
    name: (identifier)
    (field_definition
      type: (primitive_type)
      name: (identifier)
      (integer_literal))
    (field_definition
      type: (primitive_type)
      name: (identifier)
      (integer_literal))
    (field_definition
      type: (array_type
        size: (dyn_marker)
        (primitive_type))
      name: (identifier)
      (string_literal))
    (field_definition
      type: (array_type
        size: (dyn_marker)
        (named_type
          (type_name)))
      name: (identifier)
      (array_expression))))

================================================================================
Simple interface definition
================================================================================

interface Drawable {
    draw(): void
}

--------------------------------------------------------------------------------

(source_file
  (interface_definition
    name: (identifier)
    (method_signature
      name: (identifier)
      (parameter_list)
      return_type: (primitive_type))))

================================================================================
Interface with multiple methods
================================================================================

interface Entity {
    getX(): i64
    getY(): i64
    setPosition(i64 x, i64 y): void
}

--------------------------------------------------------------------------------

(source_file
  (interface_definition
    name: (identifier)
    (method_signature
      name: (identifier)
      (parameter_list)
      return_type: (primitive_type))
    (method_signature
      name: (identifier)
      (parameter_list)
      return_type: (primitive_type))
    (method_signature
      name: (identifier)
      (parameter_list
        (parameter
          (primitive_type)
          name: (identifier))
        (parameter
          (primitive_type)
          name: (identifier)))
      return_type: (primitive_type))))

================================================================================
Interface with extends clause
================================================================================

interface Moveable extends Entity {
    move(i64 dx, i64 dy): void
}

--------------------------------------------------------------------------------

(source_file
  (interface_definition
    name: (identifier)
    (extends_clause
      (identifier))
    (method_signature
      name: (identifier)
      (parameter_list
        (parameter
          (primitive_type)
          name: (identifier))
        (parameter
          (primitive_type)
          name: (identifier)))
      return_type: (primitive_type))))

================================================================================
Interface with mutable receiver
================================================================================

interface Mutable {
    (m) modify(): void
}

--------------------------------------------------------------------------------

(source_file
  (interface_definition
    name: (identifier)
    (method_signature
      name: (identifier)
      (parameter_list)
      return_type: (primitive_type))))

================================================================================
Simple impl block with interface
================================================================================

impl Point : Drawable {
    std draw(): void {
    }
}

--------------------------------------------------------------------------------

(source_file
  (impl_block
    struct_name: (identifier)
    interface: (identifier)
    (impl_method
      (function_color)
      name: (identifier)
      (parameter_list)
      return_type: (primitive_type)
      (block))))

================================================================================
Impl block without interface
================================================================================

impl Point {
    std describe(): str {
        return "point"
    }
}

--------------------------------------------------------------------------------

(source_file
  (impl_block
    struct_name: (identifier)
    (impl_method
      (function_color)
      name: (identifier)
      (parameter_list)
      return_type: (named_type
        (type_name))
      (block
        (return_statement
          (string_literal))))))

================================================================================
Impl block with multiple methods
================================================================================

impl Vector : Math {
    std add(Vector other): Vector {
    }

    std scale(f64 factor): Vector {
    }
}

--------------------------------------------------------------------------------

(source_file
  (impl_block
    struct_name: (identifier)
    interface: (identifier)
    (impl_method
      (function_color)
      name: (identifier)
      (parameter_list
        (parameter
          (named_type
            (type_name))
          name: (identifier)))
      return_type: (named_type
        (type_name))
      (block))
    (impl_method
      (function_color)
      name: (identifier)
      (parameter_list
        (parameter
          (primitive_type)
          name: (identifier)))
      return_type: (named_type
        (type_name))
      (block))))

================================================================================
Empty struct
================================================================================

struct Empty {
}

--------------------------------------------------------------------------------

(source_file
  (struct_definition
    name: (identifier)))

================================================================================
Empty interface
================================================================================

interface Marker {
}

--------------------------------------------------------------------------------

(source_file
  (interface_definition
    name: (identifier)))
